--- a/notebooks/sentiment_analysis.ipynb
+++ b/notebooks/sentiment_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a8b54c02",
+   "id": "fd51f82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8fee1d",
+   "id": "49f1b26a",
    "metadata": {},
    "source": [
     "References:\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c648fbb",
+   "id": "87b10822",
    "metadata": {},
    "source": [
     "## Data Loading\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85e8a33a",
+   "id": "f61f322b",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33db8929",
+   "id": "127242a3",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e48da2d",
+   "id": "807e2065",
    "metadata": {},
    "source": [
     "Let's check the categories distribution"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d0de07f",
+   "id": "1dc460da",
    "metadata": {},
    "outputs": [
     {
@@ -271,18 +271,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea463a81",
+   "id": "d5f0f9bf",
    "metadata": {},
    "source": [
-    "The dataset is not pretty imbalanced..  \n",
+    "The dataset is not pretty imbalanced. Considering that there are 5 categories, each category should represent a 20% of the data to be equally balanced. In this case, the less frequent category represent a 13% of the data. \n",
     "\n",
-    "Now let's encode the classes into integers. The categories are ordered from negative to positive sentiment."
+    "Let's encode the classes into integers. The categories are ordered from negative to positive."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "20129428",
+   "id": "46989450",
    "metadata": {},
    "outputs": [
     {
@@ -469,197 +469,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde343c7",
+   "id": "dd5e8d67",
    "metadata": {},
    "source": [
-    "Now we are going to check the tweets lenght"
+    "The maximum number of characters allowed into a tweet is 280. We are going to check the tweets lenght, in order to analyze the data contained into the tweets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ac690952",
+   "execution_count": 1,
+   "id": "2aa891f8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>UserName</th>\n",
-       "      <th>ScreenName</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>TweetAt</th>\n",
-       "      <th>OriginalTweet</th>\n",
-       "      <th>Sentiment</th>\n",
-       "      <th>lenght</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3799</td>\n",
-       "      <td>48751</td>\n",
-       "      <td>London</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>@MeNyrbie @Phil_Gahan @Chrisitv https://t.co/i...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3800</td>\n",
-       "      <td>48752</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>advice Talk to your neighbours family to excha...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3801</td>\n",
-       "      <td>48753</td>\n",
-       "      <td>Vagabonds</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>Coronavirus Australia: Woolworths to give elde...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3802</td>\n",
-       "      <td>48754</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>My food stock is not the only one which is emp...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>306</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3803</td>\n",
-       "      <td>48755</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>Me, ready to go at supermarket during the #COV...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3793</th>\n",
-       "      <td>3794</td>\n",
-       "      <td>48746</td>\n",
-       "      <td>Israel ??</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>Meanwhile In A Supermarket in Israel -- People...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3794</th>\n",
-       "      <td>3795</td>\n",
-       "      <td>48747</td>\n",
-       "      <td>Farmington, NM</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>Did you panic buy a lot of non-perishable item...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>213</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3795</th>\n",
-       "      <td>3796</td>\n",
-       "      <td>48748</td>\n",
-       "      <td>Haverford, PA</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>Asst Prof of Economics @cconces was on @NBCPhi...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3796</th>\n",
-       "      <td>3797</td>\n",
-       "      <td>48749</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>Gov need to do somethings instead of biar je r...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3797</th>\n",
-       "      <td>3798</td>\n",
-       "      <td>48750</td>\n",
-       "      <td>Arlington, Virginia</td>\n",
-       "      <td>16-03-2020</td>\n",
-       "      <td>I and @ForestandPaper members are committed to...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>254</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>44955 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      UserName  ScreenName             Location     TweetAt  \\\n",
-       "0         3799       48751               London  16-03-2020   \n",
-       "1         3800       48752                   UK  16-03-2020   \n",
-       "2         3801       48753            Vagabonds  16-03-2020   \n",
-       "3         3802       48754                  NaN  16-03-2020   \n",
-       "4         3803       48755                  NaN  16-03-2020   \n",
-       "...        ...         ...                  ...         ...   \n",
-       "3793      3794       48746            Israel ??  16-03-2020   \n",
-       "3794      3795       48747       Farmington, NM  16-03-2020   \n",
-       "3795      3796       48748        Haverford, PA  16-03-2020   \n",
-       "3796      3797       48749                  NaN  16-03-2020   \n",
-       "3797      3798       48750  Arlington, Virginia  16-03-2020   \n",
-       "\n",
-       "                                          OriginalTweet  Sentiment  lenght  \n",
-       "0     @MeNyrbie @Phil_Gahan @Chrisitv https://t.co/i...          2     111  \n",
-       "1     advice Talk to your neighbours family to excha...          3     237  \n",
-       "2     Coronavirus Australia: Woolworths to give elde...          3     131  \n",
-       "3     My food stock is not the only one which is emp...          3     306  \n",
-       "4     Me, ready to go at supermarket during the #COV...          0     310  \n",
-       "...                                                 ...        ...     ...  \n",
-       "3793  Meanwhile In A Supermarket in Israel -- People...          3     127  \n",
-       "3794  Did you panic buy a lot of non-perishable item...          1     213  \n",
-       "3795  Asst Prof of Economics @cconces was on @NBCPhi...          2     185  \n",
-       "3796  Gov need to do somethings instead of biar je r...          0     174  \n",
-       "3797  I and @ForestandPaper members are committed to...          4     254  \n",
-       "\n",
-       "[44955 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_9688/501487315.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'lenght'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'OriginalTweet'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -670,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3f5422c8",
+   "id": "feb43e0c",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b70df16a",
+   "id": "4fa5afa8",
    "metadata": {},
    "outputs": [
     {
@@ -722,9 +553,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6908151a",
+   "metadata": {},
+   "source": [
+    "There are several tweets with a length longer than 280, let's analyze one of these examples:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4e08c680",
+   "id": "4e65b90c",
    "metadata": {},
    "outputs": [
     {
@@ -744,15 +583,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5150f18",
+   "id": "9ffa4972",
    "metadata": {},
    "source": [
-    "There are tweets that contain special characters (spaces etc, that will be removed). Besides, some tweets contain URLs, but, I don't know how to remove them. Let's check how the model perform without removing URLs"
+    "As shown above, the tween contains several carriage return characters `\\r` and a URL at the end. It also contains some uppercase letters.  \n",
+    "The tokenization will take care of that errors."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7fafd233",
+   "id": "f31aa754",
    "metadata": {},
    "source": [
     "## Train Test Split"
@@ -761,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4867b480",
+   "id": "9b79baec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5733ae9b",
+   "id": "3ae43b12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,16 +632,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b7ae94",
+   "id": "af114679",
    "metadata": {},
    "source": [
     "## Tokenization"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6685da88",
+   "metadata": {},
+   "source": [
+    "We are going to use a pretrained `BertTokenizer`, given that we will use a BERT model to solve the task."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da1dd8a5",
+   "id": "e3bfebf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64e8001c",
+   "id": "ce29e532",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -851,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1bf4553c",
+   "id": "fc67c427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef8a3e45",
+   "id": "3a8f99c8",
    "metadata": {},
    "source": [
     "## Set up Model"
@@ -882,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "36b5f370",
+   "id": "3e103ba8",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b78cbe5d",
+   "id": "1f258e33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "05183840",
+   "id": "6c96f1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b36ba8ae",
+   "id": "83ecb123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,12 +823,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ae0acb38",
+   "id": "f004b48d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(dataloader, model):\n",
-    "\n",
+    "def evaluate(dataloader : DataLoader, model : BertForSequenceClassification):\n",
     "    #evaluation mode \n",
     "    model.eval()\n",
     "    \n",
@@ -1021,7 +868,13 @@
     "            \n",
     "    return loss_val_avg, predictions, true_vals\n",
     "\n",
-    "def train():\n",
+    "def train(\n",
+    "    model : BertForSequenceClassification,\n",
+    "    train_loader : DataLoader,\n",
+    "    val_loader : DataLoader,\n",
+    "    optimizer : torch.optim.Optimizer,\n",
+    "    epochs : int\n",
+    "):\n",
     "    for epoch in range(1, epochs+1):\n",
     "    \n",
     "        model.train()\n",
@@ -1031,7 +884,7 @@
     "\n",
     "        predictions, true_vals = [], []\n",
     "\n",
-    "        for batch in tqdm(dataloader_train, desc = 'Epoch {:1d}'.format(epoch)):\n",
+    "        for batch in tqdm(train_loader, desc = 'Epoch {:1d}'.format(epoch)):\n",
     "\n",
     "            model.zero_grad()\n",
     "            optimizer.zero_grad() #set gradient to 0\n",
@@ -1068,11 +921,11 @@
     "\n",
     "        tqdm.write('\\n Epoch {epoch}')\n",
     "\n",
-    "        loss_train_ave = loss_train_total / len(dataloader_train)\n",
+    "        loss_train_ave = loss_train_total / len(train_loader)\n",
     "        tqdm.write(f'Training loss: {loss_train_ave}')\n",
     "        tqdm.write(f'Training accuracy: {train_acc}')\n",
     "\n",
-    "        val_loss, predictions, true_vals = evaluate(dataloader_val, model)\n",
+    "        val_loss, predictions, true_vals = evaluate(val_loader, model)\n",
     "        val_acc = accuracy_score(true_vals, predictions)\n",
     "        tqdm.write(f'Validation loss: {val_loss}')\n",
     "        tqdm.write(f'Val accuracy: {val_acc}')\n",
@@ -1083,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cf02413b",
+   "id": "a6482da1",
    "metadata": {
     "tags": []
    },
@@ -1102,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9476b053",
+   "id": "73f84528",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "221f7b3d",
+   "id": "696b4734",
    "metadata": {},
    "source": [
     "## Test set evaluation"
@@ -1448,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9066216f",
+   "id": "6f418d35",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eb3ccd14",
+   "id": "8ae26afe",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fccb2c3b",
+   "id": "056c9e72",
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "755b167a",
+   "id": "6d4e2501",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d993fbd9",
+   "id": "035890c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "3cc89ec1",
+   "id": "df2e6819",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "ad8b76a8",
+   "id": "1beb3841",
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "242ab0be",
+   "id": "1fe18fd0",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "03551884",
+   "id": "b9a14ffa",
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dddefaf",
+   "id": "9904defc",
    "metadata": {},
    "outputs": [],
    "source": []
